--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
-    <title>The Chore Creator</title>
+    <title>GPA Calculator</title>
     <script src="assets/scripts/app.js" defer type="module"></script>
     <link rel="stylesheet" href="assets/styles/styles.css" />
   </head>
